Add location validation
